--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   padding-left: 97px;
+  position: relative;
 }
 
 #header {
@@ -90,6 +91,9 @@
   background: #ffffff;
   box-shadow: 0px 3px 34px 0px #13173d1a;
   margin-left: 58px;
+  position: absolute;
+  left: 0;
+  top: 535px;
 }
 
 .card__container img {
